--- a/checkout.html
+++ b/checkout.html
@@ -33,19 +33,19 @@
         <h3>Order Summary</h3>
         <div class="summary-row">
           <span>Subtotal:</span>
-          <span id="subtotal">$0</span>
+          <span id="subtotal">KSh 0</span>
         </div>
         <div class="summary-row">
           <span>Shipping:</span>
-          <span>$10</span>
+          <span id="shipping">KSh 0</span>
         </div>
         <div class="summary-row">
           <span>Tax:</span>
-          <span id="tax">$0</span>
+          <span id="tax">KSh 0</span>
         </div>
         <div class="summary-total">
           <span>Total:</span>
-          <span id="total">$0</span>
+          <span id="total">KSh 0</span>
         </div>
         <button class="checkout-btn" onclick="completeCheckout()">Complete Purchase</button>
       </div>
@@ -54,20 +54,30 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 EDTECH SYSTEMS | Contact: info@edtechsystems.com</p>
+    <p>&copy; 2025 EDTECH SYSTEMS | Contact: ewairagu@gmail.com</p>
   </footer>
 
   <script>
+    // Format numbers as Kenyan Shillings
+    function formatKsh(amount) {
+      return 'KSh ' + Number(amount).toLocaleString('en-KE', { maximumFractionDigits: 2 });
+    }
+
     document.addEventListener('DOMContentLoaded', () => {
+      const SHIPPING = 10; // KSh
+      // Example cart; replace with real cart data as needed
       const mockCart = [
-        { id: 1, name: 'CCTV Camera', price: 50, qty: 1 },
-        { id: 2, name: 'Drone', price: 150, qty: 1 },
+        { id: 1, name: 'CCTV Camera', price: 120, qty: 1 },
+        { id: 2, name: 'Bluetooth Speaker', price: 45, qty: 2 },
       ];
 
       const container = document.getElementById('cartItemsContainer');
+      const shippingEl = document.getElementById('shipping');
+
+      shippingEl.textContent = formatKsh(SHIPPING);
 
       function renderCart(items) {
-        if (items.length === 0) {
+        if (!items || items.length === 0) {
           container.innerHTML = '<div class="empty-cart"><p>Your cart is empty</p><a href="electronics.html" class="cta-btn">Continue Shopping</a></div>';
           updateSummary([]);
           return;
@@ -77,80 +87,53 @@
           <div class="cart-item">
             <div class="cart-item-info">
               <div class="cart-item-name">${item.name}</div>
-              <div class="cart-item-price">$${item.price}</div>
+              <div class="cart-item-price">${formatKsh(item.price)}</div>
               <div class="cart-item-qty">Qty: ${item.qty}</div>
             </div>
-            <button class="cart-item-remove" onclick="removeItem(${item.id})">Remove</button>
+            <button class="cart-item-remove" data-id="${item.id}">Remove</button>
           </div>
         `).join('');
+
+        // Attach remove handlers (delegated)
+        container.querySelectorAll('.cart-item-remove').forEach(btn => {
+          btn.addEventListener('click', (e) => {
+            const id = Number(e.currentTarget.dataset.id);
+            removeItem(id);
+          });
+        });
 
         updateSummary(items);
       }
 
       window.removeItem = (id) => {
-        const idx = mockCart.findIndex(item => item.id === id);
-        if (idx > -1) mockCart.splice(idx, 1);
-        renderCart(mockCart);
+        const idx = mockCart.findIndex(i => i.id === id);
+        if (idx > -1) {
+          mockCart.splice(idx, 1);
+          renderCart(mockCart);
+        }
       };
 
       window.updateSummary = (items) => {
         const subtotal = items.reduce((sum, item) => sum + item.price * item.qty, 0);
         const tax = subtotal * 0.1;
-        const total = subtotal + 10 + tax;
-        document.getElementById('subtotal').textContent = `$${subtotal}`;
-        document.getElementById('tax').textContent = `$${tax.toFixed(2)}`;
-        document.getElementById('total').textContent = `$${total.toFixed(2)}`;
+        const total = subtotal + SHIPPING + tax;
+        document.getElementById('subtotal').textContent = formatKsh(subtotal);
+        document.getElementById('tax').textContent = formatKsh(tax);
+        document.getElementById('total').textContent = formatKsh(total);
       };
 
       window.completeCheckout = () => {
+        if (mockCart.length === 0) {
+          alert('Your cart is empty.');
+          return;
+        }
+        // Replace with real checkout logic as needed
         alert('Order placed successfully!');
+        mockCart.length = 0;
+        renderCart(mockCart);
       };
 
       renderCart(mockCart);
-    });
-  </script>
-</body>
-</html>
-
-  <!-- JS -->
-  <script>
-    // Get cart from localStorage
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const cartContainer = document.getElementById('cartItems');
-    const totalEl = document.getElementById('total');
-
-    // Display cart items
-    let total = 0;
-    cart.forEach((item, index) => {
-      const div = document.createElement('div');
-      div.className = 'product-card';
-      div.innerHTML = `
-        <h3>${item.name}</h3>
-        <p>$${item.price}</p>
-        <button onclick="removeItem(${index})" style="background-color:#f00;color:#fff;">Remove</button>
-      `;
-      cartContainer.appendChild(div);
-      total += item.price;
-    });
-
-    totalEl.textContent = `Total: $${total}`;
-
-    // Remove item function
-    function removeItem(index) {
-      cart.splice(index, 1);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      location.reload(); // reload page to update cart
-    }
-
-    // Pay Now button
-    document.getElementById('payBtn').addEventListener('click', () => {
-      if(cart.length === 0){
-        alert('Your cart is empty!');
-        return;
-      }
-      alert(`Payment successful! Total paid: $${total}`);
-      localStorage.removeItem('cart'); // clear cart after payment
-      window.location.href = 'index.html';
     });
   </script>
 </body>
