--- a/checkout.html
+++ b/checkout.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,10 +37,6 @@
           <span id="subtotal">KSh 0</span>
         </div>
         <div class="summary-row">
-          <span>Shipping:</span>
-          <span id="shipping">KSh 0</span>
-        </div>
-        <div class="summary-row">
           <span>Tax:</span>
           <span id="tax">KSh 0</span>
         </div>
@@ -47,7 +44,7 @@
           <span>Total:</span>
           <span id="total">KSh 0</span>
         </div>
-        <button class="checkout-btn" onclick="completeCheckout()">Complete Purchase</button>
+        <button class="checkout-btn" id="checkoutBtn">Complete Purchase</button>
       </div>
     </div>
   </div>
@@ -60,80 +57,101 @@
   <script>
     // Format numbers as Kenyan Shillings
     function formatKsh(amount) {
-      return 'KSh ' + Number(amount).toLocaleString('en-KE', { maximumFractionDigits: 2 });
+      return 'KSh ' + Number(amount).toLocaleString('en-KE', { maximumFractionDigits: 0 });
+    }
+
+    // Shipping fee removed
+    const TAX_RATE = 0.10; // 10% tax
+
+    function getCart() {
+      return JSON.parse(localStorage.getItem('cart')) || [];
+    }
+
+    function saveCart(cart) {
+      localStorage.setItem('cart', JSON.stringify(cart));
     }
 
     document.addEventListener('DOMContentLoaded', () => {
-      const SHIPPING = 10; // KSh
-      // Example cart; replace with real cart data as needed
-      const mockCart = [
-        { id: 1, name: 'CCTV Camera', price: 120, qty: 1 },
-        { id: 2, name: 'Bluetooth Speaker', price: 45, qty: 2 },
-      ];
-
       const container = document.getElementById('cartItemsContainer');
-      const shippingEl = document.getElementById('shipping');
+      const subtotalEl = document.getElementById('subtotal');
+      const taxEl = document.getElementById('tax');
+      const totalEl = document.getElementById('total');
+      const checkoutBtn = document.getElementById('checkoutBtn');
 
-      shippingEl.textContent = formatKsh(SHIPPING);
-
-      function renderCart(items) {
-        if (!items || items.length === 0) {
+      function renderCart() {
+        const cart = getCart();
+        if (!cart || cart.length === 0) {
           container.innerHTML = '<div class="empty-cart"><p>Your cart is empty</p><a href="electronics.html" class="cta-btn">Continue Shopping</a></div>';
           updateSummary([]);
           return;
         }
 
-        container.innerHTML = items.map(item => `
-          <div class="cart-item">
+        container.innerHTML = cart.map(item => `
+          <div class="cart-item" data-key="${item.key}">
             <div class="cart-item-info">
-              <div class="cart-item-name">${item.name}</div>
+              <div class="cart-item-name">${item.brand ? item.brand + ' ' : ''}${item.name}</div>
               <div class="cart-item-price">${formatKsh(item.price)}</div>
-              <div class="cart-item-qty">Qty: ${item.qty}</div>
+              <div class="cart-item-controls" style="margin-top:8px;">
+                <button class="qty-btn" data-action="decrease" aria-label="Decrease quantity">−</button>
+                <span class="qty" style="margin:0 8px">${item.qty}</span>
+                <button class="qty-btn" data-action="increase" aria-label="Increase quantity">+</button>
+                <button class="cart-item-remove" data-action="remove" style="margin-left:12px;background:#dc3545;color:#fff;padding:6px;border-radius:4px;border:none;cursor:pointer;">Remove</button>
+              </div>
             </div>
-            <button class="cart-item-remove" data-id="${item.id}">Remove</button>
           </div>
         `).join('');
 
-        // Attach remove handlers (delegated)
-        container.querySelectorAll('.cart-item-remove').forEach(btn => {
-          btn.addEventListener('click', (e) => {
-            const id = Number(e.currentTarget.dataset.id);
-            removeItem(id);
-          });
-        });
-
-        updateSummary(items);
+        updateSummary(cart);
       }
 
-      window.removeItem = (id) => {
-        const idx = mockCart.findIndex(i => i.id === id);
-        if (idx > -1) {
-          mockCart.splice(idx, 1);
-          renderCart(mockCart);
+      function updateSummary(cartItems) {
+        const subtotal = (cartItems || getCart()).reduce((sum, it) => sum + Number(it.price) * Number(it.qty), 0);
+        const tax = subtotal * TAX_RATE;
+        const total = subtotal + tax; // shipping removed
+
+        subtotalEl.textContent = formatKsh(subtotal);
+        taxEl.textContent = formatKsh(tax);
+        totalEl.textContent = formatKsh(total);
+      }
+
+      // Delegated click handler: qty changes and remove
+      container.addEventListener('click', (e) => {
+        const btn = e.target.closest('button');
+        if (!btn) return;
+        const action = btn.dataset.action;
+        const itemEl = btn.closest('.cart-item');
+        if (!itemEl) return;
+        const key = itemEl.dataset.key;
+        let cart = getCart();
+        const idx = cart.findIndex(i => i.key === key);
+        if (idx === -1) return;
+
+        if (action === 'increase') {
+          cart[idx].qty = Number(cart[idx].qty) + 1;
+        } else if (action === 'decrease') {
+          cart[idx].qty = Math.max(1, Number(cart[idx].qty) - 1);
+        } else if (action === 'remove') {
+          cart.splice(idx, 1);
         }
-      };
+        saveCart(cart);
+        renderCart();
+      });
 
-      window.updateSummary = (items) => {
-        const subtotal = items.reduce((sum, item) => sum + item.price * item.qty, 0);
-        const tax = subtotal * 0.1;
-        const total = subtotal + SHIPPING + tax;
-        document.getElementById('subtotal').textContent = formatKsh(subtotal);
-        document.getElementById('tax').textContent = formatKsh(tax);
-        document.getElementById('total').textContent = formatKsh(total);
-      };
-
-      window.completeCheckout = () => {
-        if (mockCart.length === 0) {
+      // Checkout button
+      checkoutBtn.addEventListener('click', () => {
+        const cart = getCart();
+        if (!cart || cart.length === 0) {
           alert('Your cart is empty.');
           return;
         }
-        // Replace with real checkout logic as needed
+        // Placeholder: call backend/checkout flow here
         alert('Order placed successfully!');
-        mockCart.length = 0;
-        renderCart(mockCart);
-      };
+        localStorage.removeItem('cart');
+        renderCart();
+      });
 
-      renderCart(mockCart);
+      // init
+      renderCart();
     });
   </script>
 </body>
