logo added to html files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <a href="electronics.html" class="cta-btn">Browse Products</a>
     </div>
     <div class="hero-image">
-      <img src="images/wifi-router-tplink.jpg" alt="Featured tech" loading="lazy">
+      <img src="images/Blue & Black Globe Logo.png" alt="Featured tech" loading="lazy">
+      <img src="images/blue-black-globe-logo.png" alt="Featured tech" loading="lazy">
     </div>
   </section>
 
