TEMPORARY CHANGE TO INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- About -->
   <section class="about container">
-    <h2>About EDTECH SYSTEMS</h2>
+    <h2>About TECHFLOW SYSTEMS</h2>
     <p>We supply reliable, affordable electronics with friendly support and fast delivery across Kenya.</p>
   </section>
 
